fix grid layout bug

--- a/src/components/settings/settings.styles.scss
+++ b/src/components/settings/settings.styles.scss
@@ -4,11 +4,11 @@
   grid-column: col-end 4 / full-end;
   border-left: $border;
   display: grid;
-  grid-template-rows: min-content 1rem 2rem 1fr;
+  grid-template-rows: min-content 1rem 1fr;
 
   &__form {
-    padding: 1rem 0 0 0;
-    grid-row: 4 / -1;
+    padding: 1rem 0;
+    grid-row: 3 / -1;
     align-self: end;
   }
   @media (max-width: 768px) {
@@ -40,3 +40,9 @@
   color: $primary-font-color-1;
  
 }
+
+.ui.form .fields {
+  margin-bottom: 0;
+}
+
+
